feat: 新增支持promise的foreach操作，维护loadCss、loadScript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "@ihccc/utils": ["src"],
       "@ihccc/utils/*": ["src/*", "*"]
     },
-    "outDir": "./"
+    "outDir": "dist"
   },
   "include": ["src/**/*", ".dumirc.ts"],
   "exclude": ["node_modules", "es/**/*", "cjs/**/*", "dist/**/*"]
