--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ihccc/utils",
   "version": "0.0.1-alpha.1",
-  "description": "A JavaScript utility library.",
+  "description": "A javascript utility library.",
   "license": "MIT",
   "main": "./lib/index.js",
   "module": "./es/index.js",
