--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ihccc/utils",
-  "version": "0.0.1-alpha.3",
+  "version": "0.0.2",
   "description": "A javascript utility library.",
   "license": "MIT",
   "main": "./lib/index.js",
