fix: 修复问题，完善文档

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ihccc/utils",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.1",
   "description": "A javascript utility library.",
   "license": "MIT",
   "main": "./lib/index.js",
@@ -35,7 +35,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "http://127.0.0.1:4873/"
   },
   "authors": [
     "ihccc-cn <lccc10588@gmail.com>"
